<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="user_display_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@string/pref_default_email"
        android:key="user_email"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_email_title" />
    <ListPreference
        android:defaultValue="@string/pref_fav_social_net_default"
        android:entries="@array/pref_fav_social_net_entry"
        android:entryValues="@array/pref_fav_social_net_entry_value"
        android:key="user_social_network"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_fav_social_net" />

</PreferenceScreen>
